crates/ruff_python_parser/src/parser/snapshots/ruff_python_parser__parser__tests__dict_double_star_missing_left_operand.snap
---
source: crates/ruff_python_parser/src/parser/tests.rs
expression: result
---
Parsed {
    syntax: ModExpression {
        node_index: NodeIndex(None),
        range: 0..25,
        body: DictComp(
            ExprDictComp {
                node_index: NodeIndex(None),
                range: 0..25,
                key: Name(
                    ExprName {
                        node_index: NodeIndex(None),
                        range: 1..2,
                        id: Name("x"),
                        ctx: Load,
                    },
                ),
                value: BinOp(
                    ExprBinOp {
                        node_index: NodeIndex(None),
                        range: 4..7,
                        left: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 7..7,
                                id: Name(""),
                                ctx: Invalid,
                            },
                        ),
                        op: Pow,
                        right: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 6..7,
                                id: Name("y"),
                                ctx: Load,
                            },
                        ),
                    },
                ),
                generators: [
                    Comprehension {
                        range: 8..24,
                        node_index: NodeIndex(None),
                        target: Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 12..16,
                                elts: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 12..13,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 15..16,
                                            id: Name("y"),
                                            ctx: Store,
                                        },
                                    ),
                                ],
                                ctx: Store,
                                parenthesized: false,
                            },
                        ),
                        iter: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 20..24,
                                id: Name("data"),
                                ctx: Load,
                            },
                        ),
                        ifs: [],
                        is_async: false,
                    },
                ],
            },
        ),
    },
    tokens: Tokens {
        raw: [
            Lbrace 0..1,
            Name 1..2,
            Colon 2..3,
            DoubleStar 4..6,
            Name 6..7,
            For 8..11,
            Name 12..13,
            Comma 13..14,
            Name 15..16,
            In 17..19,
            Name 20..24,
            Rbrace 24..25,
            Newline 25..25,
        ],
    },
    errors: [],
    unsupported_syntax_errors: [],
}
