crates/ruff_python_parser/src/parser/snapshots/ruff_python_parser__parser__tests__expr_mode_invalid_syntax2.snap
---
source: crates/ruff_python_parser/src/parser/tests.rs
expression: error
snapshot_kind: text
---
ParseError {
    error: UnexpectedExpressionToken,
    location: 7..13,
}
