crates/ruff_python_parser/src/parser/snapshots/ruff_python_parser__parser__tests__fstring_expr_inner_line_continuation_newline_t_string.snap
---
source: crates/ruff_python_parser/src/parser/tests.rs
expression: error
---
ParseError {
    error: Lexical(
        TStringError(
            SingleRbrace,
        ),
    ),
    location: 8..9,
}
