crates/ruff_python_parser/src/parser/snapshots/ruff_python_parser__parser__tests__ipython_escape_command_in_with_statement.snap
---
source: crates/ruff_python_parser/src/parser/tests.rs
expression: error
---
ParseError {
    error: ExpectedToken {
        expected: Comma,
        found: Question,
    },
    location: 7..8,
}
