crates/ruff_python_parser/src/parser/snapshots/ruff_python_parser__parser__tests__ipython_help_escape_command_as_expression.snap
---
source: crates/ruff_python_parser/src/parser/tests.rs
expression: error
---
ParseError {
    error: Lexical(
        UnrecognizedToken {
            tok: '?',
        },
    ),
    location: 0..1,
}
